revert: ai form code (#10235)
@coderabbitai: ignore